--- a/src/assets/styles/pages/verify.scss
+++ b/src/assets/styles/pages/verify.scss
@@ -11,5 +11,6 @@
         background-size: cover;
         background-repeat: no-repeat;
         z-index: 899px;
+        height: calc(100vh - 80px);
     }
 }
