--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -15,6 +15,8 @@
 @import "pages/home.scss";
 @import "pages/auth.scss";
 @import "pages/verify.scss";
+@import "pages/campaign.scss";
+
 @import "pages/dashboard.scss";
 
 
@@ -101,16 +103,16 @@ input {
   height: 59px;
 
   .dropdown{
-    @apply  absolute bg-white rounded-lg p-4;
+    @apply  absolute bg-white rounded-lg p-2;
     // height: 300px;
-    width: 100%;
-    left: 200px;
-    bottom: 62px;
+    width: 200px;
+    right: 0px;
+    top: 62px;
     z-index: 9999;
     box-shadow:  3px 0px 10px 0 rgba(0, 0, 0, 0.205);
 
    .dropdown_list-wrapper{
-    height: 300px;
+    height: 120px;
 
     overflow-y: scroll;
 
@@ -132,7 +134,7 @@ input {
     .dropdown_list{
 
       .list_item{
-    @apply p-3 px-6;
+    @apply p-2 px-4;
 
       }
     }
