--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -1,6 +1,6 @@
 .home {
     .hero {
-        height: calc(100vh - 100px);
+        height: calc(100vh - 80px);
         background-image: url(../../images/hero.png) ;
         background-size: cover;
         @apply bg-dark-blue;
@@ -9,7 +9,7 @@
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            left: 10%;
+            left: 105px;
             @apply p-2;
             p, h1{
                 color: white;
